# Medzen-iwani

./: .gitignore  .mcp.json  4_SYSTEM_INTEGRATION_SUMMARY.md  ACCOUNT_CREATION_TEST_REPORT.md  ACCOUNT_CREATION_VERIFICATION.md  ACTUAL_LOGIN_FLOW.md  AFRICAN_LANGUAGES_TRANSCRIPTION_SUPPORT.md  AGORA_VIDEO_CALL_TESTING_GUIDE.md  AI_CHATBOT_TEST_REPORT.md  AI_CHATBOT_TEST_SUMMARY.md  AI_CHAT_BACKEND_SUMMARY.txt  AI_CHAT_BACKEND_UPDATE_COMPLETE.md  AI_CHAT_ERROR_HANDLING_TEST_GUIDE.md  AI_CHAT_IMPLEMENTATION_COMPLETE.md  AI_CHAT_MESSAGE_TESTING_GUIDE.md  AI_CHAT_MULTILINGUAL_TEST_GUIDE.md  AI_CHAT_MULTI_ROLE_IMPLEMENTATION_SUMMARY.md  AI_CHAT_PERFORMANCE_LOAD_TEST_GUIDE.md  AI_CHAT_PERSISTENCE_TEST_GUIDE.md  AI_CHAT_ROLE_BASED_TEST_GUIDE.md  AI_CHAT_SECURITY_AUTHORIZATION_TEST_GUIDE.md  AI_CHAT_TOKEN_COST_OPTIMIZATION_TEST_GUIDE.md  ANDROID_BUILD_FIX_COMPLETE.md  ANDROID_CAMERA_FIX_JAN12.md  ANDROID_EMULATOR_CAMERA_FIX.md  ANDROID_EMULATOR_VIDEO_CALL_SETUP.md  ANDROID_MICROPHONE_FIX_JAN12.md  ANDROID_NETWORK_FIX_JAN12.md  ANDROID_VIDEO_CALL_FIX.md  ANDROID_VIDEO_CALL_TEST_RESULTS.md  ANDROID_WEBVIEW_OUTDATED_ROOT_CAUSE_JAN12.md  ANDROID_WEBVIEW_PERMISSION_FIX_JAN12.md  APPLY_MIGRATION_CHECKLIST.md  APPOINTMENTS_UPDATE_JAN13.md  APPOINTMENT_BASED_CHAT_TEST_PLAN.md  APPOINTMENT_CHAT_IMPLEMENTATION_SUMMARY.md  APPOINTMENT_CHAT_QUICK_TEST.md  AUDIOVIDEOVIDSTOP_EVENT_SUPPRESSION_FIX.md  AUTHENTICATION_WORKFLOW_TEST_REPORT.md  AUTH_FIX_SUMMARY.md  (+664 more)
powersync-mcp-server/: POWERSYNC_QUICK_START.md  README.md  pyproject.toml
powersync-mcp-server/src/: powersync_mcp_server.py
(+1147 files in other folders)
