[project]
name = "powersync-mcp-server"
version = "0.1.0"
description = "MCP server for PowerSync sync engine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
powersync-mcp = "powersync_mcp_server:main"
